; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/kbdcontrol/extr_kbdcontrol.c_load_default_functionkeys.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/kbdcontrol/extr_kbdcontrol.c_load_default_functionkeys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@NUM_FKEYS = common dso_local global i32 0, align 4
@fkey_table = common dso_local global i32* null, align 8
@SETFKEY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"setting function key\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @load_default_functionkeys to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_default_functionkeys() #0 {
  %1 = alloca %struct.TYPE_3__, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  br label %3

3:                                                ; preds = %31, %0
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @NUM_FKEYS, align 4
  %6 = icmp slt i32 %4, %5
  br i1 %6, label %7, label %34

7:                                                ; preds = %3
  %8 = load i32, i32* %2, align 4
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = load i32*, i32** @fkey_table, align 8
  %13 = load i32, i32* %2, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @strcpy(i32 %11, i32 %16)
  %18 = load i32*, i32** @fkey_table, align 8
  %19 = load i32, i32* %2, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @strlen(i32 %22)
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  store i32 %23, i32* %24, align 4
  %25 = load i32, i32* @SETFKEY, align 4
  %26 = call i64 @ioctl(i32 0, i32 %25, %struct.TYPE_3__* %1)
  %27 = icmp slt i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %7
  %29 = call i32 @warn(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %30

30:                                               ; preds = %28, %7
  br label %31

31:                                               ; preds = %30
  %32 = load i32, i32* %2, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %2, align 4
  br label %3

34:                                               ; preds = %3
  ret void
}

declare dso_local i32 @strcpy(i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i64 @ioctl(i32, i32, %struct.TYPE_3__*) #1

declare dso_local i32 @warn(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
